Changed PHP to HTML

--- a/index.html
+++ b/index.html
@@ -9,7 +9,27 @@
   </head>
 
   <body>
-    <?php include("Includes/header.php"); ?>
+    <header>
+      <nav>
+        <ul>
+          <li>
+            <a href="#about-me">About me</a>
+          </li>
+          <li>
+            <a href="#professional-experience-div">Professional experience</a>
+          </li>
+          <li>
+            <a href="#diplomas-div">Diplomas</a>
+          </li>
+          <li>
+            <a href="#skills-div">Skills</a>
+          </li>
+          <li>
+            <a href="#contact-me">Contact me</a>
+          </li>
+        </ul>
+      </nav>
+    </header>
 
     <main>
       <h1>Hi! I'm Anto, computer science student</h1>    
@@ -69,7 +89,8 @@
       </div>
     </main>
 
-    <?php include("Includes/footer.php"); ?>
+    <footer>© Anto Benedetti 2022</footer>
+
     <script src="index.js"></script>
   </body>
 </html>
