Added interactivity & style, issues updated

--- a/index.html
+++ b/index.html
@@ -13,19 +13,19 @@
       <nav>
         <ul>
           <li>
-            <a href="#about-me">About me</a>
+            <button id="about-me-btn">About me</a>
           </li>
           <li>
-            <a href="#professional-experience-div">Professional experience</a>
+            <button id="professional-experience-btn">Professional experience</a>
           </li>
           <li>
-            <a href="#diplomas-div">Diplomas</a>
+            <button id="diplomas-btn">Diplomas</a>
           </li>
           <li>
-            <a href="#skills-div">Skills</a>
+            <button id="skills-btn">Skills</a>
           </li>
           <li>
-            <a href="#contact-me">Contact me</a>
+            <button id="contact-me-btn">Contact me</a>
           </li>
         </ul>
       </nav>
@@ -34,7 +34,7 @@
     <main>
       <h1>Hi! I'm Anto, computer science student</h1>    
 
-      <div id="about-me">
+      <div id="about-me-div">
         <h2>About me</h2>
         <p>Since I was a kid, I've always been passionate about IT, video games,
         high-tech and more, but what I'm keen on is programming ! I really like
@@ -62,7 +62,7 @@
         <ul id="skills-ul"></ul>
       </div>
 
-      <div id="contact-me">
+      <div id="contact-me-div">
         <h2>Contact me</h2>
         <form id="contact-form" accept-charset="UTF-8" action="send_message.php"
         method="POST">
