Deleted 'me' & 'my' occurences

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
       <nav>
         <ul>
           <li>
-            <button id="about-me-btn">About me</a>
+            <button id="about-btn">About </a>
           </li>
           <li>
             <button id="professional-experience-btn">Professional experience</a>
@@ -25,7 +25,7 @@
             <button id="skills-btn">Skills</a>
           </li>
           <li>
-            <button id="contact-me-btn">Contact me</a>
+            <button id="contact-btn">Contact </a>
           </li>
         </ul>
       </nav>
@@ -34,36 +34,36 @@
     <main>
       <h1>Hi! I'm Anto, computer science student</h1>    
 
-      <div id="about-me-div">
-        <h2>About me</h2>
+      <div id="about-div">
+        <h2>About</h2>
         <p>Since I was a kid, I've always been passionate about IT, video games,
         high-tech and more, but what I'm keen on is programming ! I really like
         to code a lot, it's like having a super power. I'm interested in the web
         3.0 development for building decentralized apps on blockchains, but also
-        in software and mobile development. My qualities are dedication, 
+        in software and mobile development. qualities are dedication, 
         determination and project management.</p>
       </div>
       
       <div id="professional-experience-div">
-        <h2>My professional experience</h2>
+        <h2>Professional experience</h2>
         <ul id="professional-experience-ul"></ul>
       </div>
 
       <div id="diplomas-div">
-        <h2>My diplomas</h2>
+        <h2>Diplomas</h2>
         <ul id="diplomas-ul"></ul>
       </div>
 
       <div id="skills-div">
-        <h2>My skills</h2>
+        <h2>Skills</h2>
         <p>Here are what I've learnt and what I use. Those are ordered from the
         most mastered to the least.</p>
           
         <ul id="skills-ul"></ul>
       </div>
 
-      <div id="contact-me-div">
-        <h2>Contact me</h2>
+      <div id="contact-div">
+        <h2>Contact</h2>
         <form id="contact-form" accept-charset="UTF-8" action="send_message.php"
         method="POST">
           <label for="name">Name* (first/last names or company)</label><br>
