--- a/index.html
+++ b/index.html
@@ -9,30 +9,29 @@
   </head>
 
   <body>
-    <header>
-      <nav>
-        <ul>
-          <li>
-            <button id="about-btn">About </a>
-          </li>
-          <li>
-            <button id="professional-experience-btn">Professional experience</a>
-          </li>
-          <li>
-            <button id="diplomas-btn">Diplomas</a>
-          </li>
-          <li>
-            <button id="skills-btn">Skills</a>
-          </li>
-          <li>
-            <button id="contact-btn">Contact </a>
-          </li>
-        </ul>
-      </nav>
+    <header id="header">
+      <h1 id="title">Anto Benedetti's Portfolio</h1>
+      <button id="go-back-btn">Go back</button>
     </header>
 
     <main>
-      <h1>Hi! I'm Anto, computer science student</h1>    
+      <ul id="main-menu">
+        <li>
+          <button id="about-btn">About </a>
+        </li>
+        <li>
+          <button id="professional-experience-btn">Professional experience</a>
+        </li>
+        <li>
+          <button id="diplomas-btn">Diplomas</a>
+        </li>
+        <li>
+          <button id="skills-btn">Skills</a>
+        </li>
+        <li>
+          <button id="contact-btn">Contact </a>
+        </li>
+      </ul>
 
       <div id="about-div">
         <h2>About</h2>
@@ -88,9 +87,6 @@
         </form>
       </div>
     </main>
-
-    <footer>© Anto Benedetti 2022</footer>
-
-    <script src="index.js"></script>
+    <script src="main.js"></script>
   </body>
 </html>
