--- a/index.html
+++ b/index.html
@@ -11,25 +11,25 @@
   <body>
     <header id="header">
       <h1 id="title">Anto Benedetti's Portfolio</h1>
-      <button id="go-back-btn">Go back</button>
+      <button id="go-back-btn"><span>Go back</span></button>
     </header>
 
     <main>
       <ul id="main-menu">
         <li>
-          <button id="about-btn">About </a>
+          <button id="about-btn"><span>About</span></a>
         </li>
         <li>
-          <button id="professional-experience-btn">Professional experience</a>
+          <button id="professional-experience-btn"><span>Professional experience</span></a>
         </li>
         <li>
-          <button id="diplomas-btn">Diplomas</a>
+          <button id="diplomas-btn"><span>Diplomas</span></a>
         </li>
         <li>
-          <button id="skills-btn">Skills</a>
+          <button id="skills-btn"><span>Skills</span></a>
         </li>
         <li>
-          <button id="contact-btn">Contact </a>
+          <button id="contact-btn"><span>Contact</span></a>
         </li>
       </ul>
 
