Updated go back btn position, justified text

--- a/index.html
+++ b/index.html
@@ -11,7 +11,6 @@
   <body>
     <header id="header">
       <h1 id="title">Anto Benedetti's Portfolio</h1>
-      <button id="go-back-btn"><span>Go back</span></button>
     </header>
 
     <main>
@@ -35,12 +34,13 @@
 
       <div id="about-div">
         <h2>About</h2>
-        <p>Since I was a kid, I've always been passionate about IT, video games,
-        high-tech and more, but what I'm keen on is programming ! I really like
-        to code a lot, it's like having a super power. I'm interested in the web
-        3.0 development for building decentralized apps on blockchains, but also
-        in software and mobile development. qualities are dedication, 
-        determination and project management.</p>
+        <p>Since I was a kid, I've always been passionate about IT, video
+        games, high-tech and more, but what I'm keen on is programming !<br>
+        <br>I really like to code a lot, it's like having a super power.<br>
+        <br>I'm interested in the web 3.0 development for building
+        decentralized apps on blockchains, but also in software and mobile 
+        development.<br><br>My qualities are dedication, determination and
+        project management.</p>
       </div>
       
       <div id="professional-experience-div">
@@ -86,6 +86,8 @@
           <p>*: required field</p>
         </form>
       </div>
+
+      <button id="go-back-btn"><span>Go back</span></button>
     </main>
     <script src="main.js"></script>
   </body>
