Added animated particles as background

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <title>Anto's portfolio</title>
   </head>
 
-  <body>
+  <body id="particles-js">
     <header id="header">
       <h1 id="title">Anto Benedetti's Portfolio</h1>
     </header>
@@ -89,6 +89,12 @@
 
       <button id="go-back-btn"><span>Go back</span></button>
     </main>
+
+    <!-- Animated background -->
+    <script src="particles.js"></script>
+    <script src="app.js"></script>
+
+    <!-- Main script file -->
     <script src="main.js"></script>
   </body>
 </html>
