Updated project folder structure

--- a/index.html
+++ b/index.html
@@ -89,10 +89,10 @@
     <button id="go-back-btn"><span>Go back</span></button>
 
     <!-- Animated background -->
-    <script src="particles.js"></script>
-    <script src="app.js"></script>
+    <script src="JS/particles.js"></script>
+    <script src="JS/app.js"></script>
 
     <!-- Main script file -->
-    <script src="main.js"></script>
+    <script src="JS/main.js"></script>
   </body>
 </html>
