Added projects division & button + some code refacto

--- a/index.html
+++ b/index.html
@@ -23,6 +23,9 @@
           <button id="diplomas-btn"><span>Diplomas</span></a>
         </li>
         <li>
+          <button id="projects-btn"><span>Projects</span></a>
+        </li>
+        <li>
           <button id="skills-btn"><span>Skills</span></a>
         </li>
         <li>
@@ -51,6 +54,11 @@
         <ul id="diplomas-ul"></ul>
       </div>
 
+      <div id="projects-div">
+        <h2>Projects</h2>
+        <ul id="projects-ul"></ul>
+      </div>
+      
       <div id="skills-div">
         <h2>Skills</h2>
         <p>Here are what I've learnt and what I use. Those are ordered from the
