--- a/index.html
+++ b/index.html
@@ -97,8 +97,7 @@
     <button id="go-back-btn"><span>Go back</span></button>
 
     <!-- Animated background -->
-    <script src="JS/particles.js"></script>
-    <script src="JS/app.js"></script>
+    <script src="JS/Particles/particles.js"></script>
 
     <!-- Main script file -->
     <script src="JS/main.js"></script>
