--- a/index.html
+++ b/index.html
@@ -31,6 +31,25 @@
         <li>
           <button id="contact-btn"><span>Contact</span></a>
         </li>
+        <li>
+          <ul id="social-medias">
+            <li>
+              <a href="https://twitter.com/Opixelum" target="_blank">
+                <img src="Images/twitter_logo.png" alt="Twitter logo">
+              </a>
+            </li>
+            <li>
+              <a href="https://github.com/Opixelum" target="_blank">
+                <img src="Images/github_logo.png" alt="GitHub logo">
+              </a>
+            </li>
+            <li>
+              <a href="https://www.linkedin.com/in/anto-benedetti-2abab1221/" target="_blank">
+                <img src="Images/linkedin_logo.png" alt="LinkedIn logo">
+              </a>
+            </li>
+          </ul>
+        </li>
       </ul>
 
       <div id="about-div">
@@ -71,7 +90,7 @@
         <h2>Contact</h2>
         <form id="contact-form" accept-charset="UTF-8" action="send_message.php"
         method="POST">
-          <label for="name">Name* (first/last names or company)</label><br>
+          <label for="name">Name*</label><br>
           <input required type="text" id="name" name="name"
           placeholder="John Doe"><br><br>
 
