Added swipe animation (not finished)

--- a/Public/index.html
+++ b/Public/index.html
@@ -112,8 +112,11 @@
 
     <button id="go-back-btn"><span>Go back</span></button>
 
-    <!-- Animated background -->
+    <!-- Background -->
     <script src="JS/Particles/particles.js"></script>
+
+    <!-- Animations -->
+    <script src="JS/Anime/lib/anime.min.js"></script>
 
     <!-- Main script file -->
     <script src="JS/main.js"></script>
