--- a/Public/index.html
+++ b/Public/index.html
@@ -12,45 +12,50 @@
     <h1 id="title">Anto Benedetti's Portfolio</h1>
 
     <main>
-      <ul id="main-menu">
-        <li>
-          <button id="about-btn"><span>About</span></a>
-        </li>
-        <li>
-          <button id="professional-experience-btn"><span>Professional experience</span></a>
-        </li>
-        <li>
-          <button id="diplomas-btn"><span>Diplomas</span></a>
-        </li>
-        <li>
-          <button id="projects-btn"><span>Projects</span></a>
-        </li>
-        <li>
-          <button id="skills-btn"><span>Skills</span></a>
-        </li>
-        <li>
-          <button id="contact-btn"><span>Contact</span></a>
-        </li>
-        <li>
-          <ul id="social-medias">
-            <li>
-              <a href="https://twitter.com/Opixelum" target="_blank">
-                <img src="Images/twitter_logo.png" alt="Twitter logo">
-              </a>
-            </li>
-            <li>
-              <a href="https://github.com/Opixelum" target="_blank">
-                <img src="Images/github_logo.png" alt="GitHub logo">
-              </a>
-            </li>
-            <li>
-              <a href="https://www.linkedin.com/in/anto-benedetti-2abab1221/" target="_blank">
-                <img src="Images/linkedin_logo.png" alt="LinkedIn logo">
-              </a>
-            </li>
-          </ul>
-        </li>
-      </ul>
+      <div id="main-menu">
+        <ul>
+          <li>
+            <button id="about-btn"><span>About</span></a>
+          </li>
+          <li>
+            <button id="professional-experience-btn"><span>Professional experience</span></a>
+          </li>
+          <li>
+            <button id="diplomas-btn"><span>Diplomas</span></a>
+          </li>
+          <li>
+            <button id="projects-btn"><span>Projects</span></a>
+          </li>
+          <li>
+            <button id="skills-btn"><span>Skills</span></a>
+          </li>
+          <li>
+            <button id="contact-btn"><span>Contact</span></a>
+          </li>
+          <li>
+          </li>
+        </ul>
+      </div>
+
+      <div id="social-medias">
+        <ul>
+          <li>
+            <a href="https://twitter.com/Opixelum" target="_blank">
+              <img src="Images/twitter_logo.png" alt="Twitter logo">
+            </a>
+          </li>
+          <li>
+            <a href="https://github.com/Opixelum" target="_blank">
+              <img src="Images/github_logo.png" alt="GitHub logo">
+            </a>
+          </li>
+          <li>
+            <a href="https://www.linkedin.com/in/anto-benedetti-2abab1221/" target="_blank">
+              <img src="Images/linkedin_logo.png" alt="LinkedIn logo">
+            </a>
+          </li>
+        </ul>
+      </div>
 
       <div id="about-div">
         <h2>About</h2>
