--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
 
   <body id="particles-js">
     <h1 id="title">Anto Benedetti's Portfolio</h1>
+    <section><br><br><br></section>
 
     <main>
       <div id="main-menu">
