Fixed title position

--- a/index.html
+++ b/index.html
@@ -9,7 +9,8 @@
   </head>
 
   <body id="particles-js">
-    <h1 id="title">Anto Benedetti's Portfolio</h1>
+    <h1 id="title">Anto's Portfolio</h1>
+
     <section><br><br><br></section>
 
     <main>
