Updated about me

--- a/index.html
+++ b/index.html
@@ -41,7 +41,10 @@
 
       <div id="about-div">
         <h2>About</h2>
-        <p>Since I was a kid, I've always been passionate about IT, video
+
+        <p>My name is Anto Benedetti, I'm a 1st year computer science student
+        at the ESGI in Paris.<br>
+        <br>Since I was a kid, I've always been passionate about IT, video
         games, high-tech and more, but what I'm keen on is programming !<br>
         <br>I really like to code a lot, it's like having a super power.<br>
         <br>I'm interested in the web 3.0 development for building
