Fixed title (tentatively)

--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
   <body id="particles-js">
     <h1 id="title">Anto's Portfolio</h1>
 
+    <!-- Spacer -->
     <section><br><br><br></section>
 
     <main>
