Changed jobs title for shorten it

--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en-us">
   <head>
     <meta charset="UTF-8">
-    <meta name="description" content="All about my experience">
+    <meta name="description" content="All about my experiences">
     <meta name="viewport" content="initial-scale=1, maximum-scale=1">
     <link rel="stylesheet" href="CSS/style.css">
     <title>Anto's portfolio</title>
@@ -21,7 +21,7 @@
             <button id="about-btn"><span>About</span></a>
           </li>
           <li>
-            <button id="professional-experience-btn"><span>Professional experience</span></a>
+            <button id="job-experiences-btn"><span>Job experiences</span></a>
           </li>
           <li>
             <button id="diplomas-btn"><span>Diplomas</span></a>
@@ -54,9 +54,9 @@
         project management.</p>
       </div>
       
-      <div id="professional-experience-div">
-        <h2>Professional experience</h2>
-        <ul id="professional-experience-ul"></ul>
+      <div id="job-experiences-div">
+        <h2>Job experiences</h2>
+        <ul id="job-experiences-ul"></ul>
       </div>
 
       <div id="diplomas-div">
