--- a/index.html
+++ b/index.html
@@ -92,7 +92,7 @@
           <textarea required id="message" name="message"
           placeholder="Type your message here."></textarea><br><br>
 
-          <input type="submit" id="send-btn" placeholder="Send message">
+          <input type="submit" id="send-btn" value="Send message">
         </form>
       </div>
     </main>
