Updated LinkedIn link

--- a/index.html
+++ b/index.html
@@ -86,7 +86,7 @@
           </a>
         </li>
         <li>
-          <a href="https://www.linkedin.com/in/anto-benedetti-2abab1221/" target="_blank">
+          <a href="https://www.linkedin.com/in/anto-benedetti" target="_blank">
             <img src="Images/linkedin_logo.png" alt="LinkedIn logo">
           </a>
         </li>
