--- a/index.html
+++ b/index.html
@@ -66,8 +66,7 @@
       
       <div id="skills-div">
         <h2>Skills</h2>
-        <p>Here are what I've learnt and what I use. Those are ordered from the
-        most mastered to the least.</p>
+        <p>Here are what I've learnt and what I use.</p>
           
         <ul id="skills-ul"></ul>
       </div>
