--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
   </head>
 
   <body id="particles-js">
-    <h1 id="title">Anto's Portfolio</h1>
+    <h1 id="title">Anto Benedetti's Portfolio</h1>
 
     <!-- Spacer -->
     <section><br><br><br></section>
@@ -38,15 +38,23 @@
       <div id="about-div">
         <h2>About</h2>
 
-        <p>My name is Anto Benedetti, I'm a 1st year computer science student
-        at the ESGI in Paris.<br>
-        <br>Since I was a kid, I've always been passionate about IT, video
-        games, high-tech and more, but what I'm keen on is programming !<br>
-        <br>I really like to code a lot, it's like having a super power.<br>
-        <br>I'm interested in the web 3.0 development for building
-        decentralized apps on blockchains, but also in software and mobile 
-        development.<br><br>My qualities are dedication, determination and
-        project management.</p>
+        <p>
+          I discovered programming at the age of 8, when I started creating a
+          website in HTML. From that day on, I knew I was cut out to work in IT.
+          Then, at the age of 15, I started learning Python, C and C++ in my
+          spare time. I was passionate about programming (and still am today)!
+        </p>
+        <p>
+          Then, in 2021, I started digging into blockchain development,
+          particularly in Web3. I learned how blockchains work, Solidity and so
+          on. That's when I landed my first tech jobs.
+        </p>
+        <p>
+          After that, in 2022, I realized that I could accomplish bigger projects
+          and contribute more to the advancement of the world with AI. That's
+          when I started to learn more about the data science, deep learning and
+          mathematics behind this technology.
+        </p>
       </div>
 
       <div id="job-experiences-div">
