Update social medias links

--- a/index.html
+++ b/index.html
@@ -83,12 +83,12 @@
     <div id="social-medias">
       <ul>
         <li>
-          <a href="https://twitter.com/Opixelum" target="_blank">
+          <a href="https://twitter.com/opixelum" target="_blank">
             <img src="images/twitter_logo.png" alt="Twitter logo">
           </a>
         </li>
         <li>
-          <a href="https://github.com/Opixelum" target="_blank">
+          <a href="https://github.com/opixelum" target="_blank">
             <img src="images/github_logo.png" alt="GitHub logo">
           </a>
         </li>
