Improve variable naming

--- a/index.html
+++ b/index.html
@@ -18,25 +18,25 @@
       <div id="main-menu">
         <ul>
           <li>
-            <button id="about-btn"><span>About</span></a>
+            <button id="about-me-btn"><span>About me</span></button>
           </li>
           <li>
-            <button id="job-experiences-btn"><span>Job experiences</span></a>
+            <button id="job-experiences-btn"><span>Job experiences</span></button>
           </li>
           <li>
-            <button id="diplomas-btn"><span>Diplomas</span></a>
+            <button id="diplomas-btn"><span>Diplomas</span></button>
           </li>
           <li>
-            <button id="projects-btn"><span>Projects</span></a>
+            <button id="personal-projects-btn"><span>Personal projects</span></button>
           </li>
           <li>
-            <button id="skills-btn"><span>Skills</span></a>
+            <button id="skills-btn"><span>Skills</span></button>
           </li>
         </ul>
       </div>
 
-      <div id="about-div">
-        <h2>About</h2>
+      <div id="about-me-div">
+        <h2>About me</h2>
 
         <p>
           I discovered programming at the age of 8, when I started creating a
@@ -67,9 +67,9 @@
         <ul id="diplomas-ul"></ul>
       </div>
 
-      <div id="projects-div">
-        <h2>Projects</h2>
-        <ul id="projects-ul"></ul>
+      <div id="personal-projects-div">
+        <h2>Personal projects</h2>
+        <ul id="personal-projects-ul"></ul>
       </div>
 
       <div id="skills-div">
@@ -83,17 +83,12 @@
     <div id="social-medias">
       <ul>
         <li>
-          <a href="https://twitter.com/opixelum" target="_blank">
-            <img src="images/twitter_logo.png" alt="Twitter logo">
-          </a>
-        </li>
-        <li>
           <a href="https://github.com/opixelum" target="_blank">
             <img src="images/github_logo.png" alt="GitHub logo">
           </a>
         </li>
         <li>
-          <a href="https://www.linkedin.com/in/anto-benedetti" target="_blank">
+          <a href="https://linkedin.com/in/anto-benedetti" target="_blank">
             <img src="images/linkedin_logo.png" alt="LinkedIn logo">
           </a>
         </li>
