Translate to french

--- a/index.html
+++ b/index.html
@@ -2,14 +2,14 @@
 <html lang="en-us">
   <head>
     <meta charset="UTF-8">
-    <meta name="description" content="All about my experiences">
+    <meta name="description" content="Tout mon parcours">
     <meta name="viewport" content="initial-scale=1, maximum-scale=1">
     <link rel="stylesheet" href="css/style.css">
-    <title>Anto's portfolio</title>
+    <title>Portfolio d'Anto</title>
   </head>
 
   <body id="particles-js">
-    <h1 id="title">Anto Benedetti's Portfolio</h1>
+    <h1 id="title">Portfolio d'Anto Benedetti</h1>
 
     <!-- Spacer -->
     <section><br><br><br></section>
@@ -18,64 +18,62 @@
       <div id="main-menu">
         <ul>
           <li>
-            <button id="about-me-btn"><span>About me</span></button>
+            <button id="about-me-btn"><span>À propos de moi</span></button>
           </li>
           <li>
-            <button id="job-experiences-btn"><span>Job experiences</span></button>
+            <button id="job-experiences-btn"><span>Expériences professionnelles</span></button>
           </li>
           <li>
-            <button id="diplomas-btn"><span>Diplomas</span></button>
+            <button id="diplomas-btn"><span>Formations</span></button>
           </li>
           <li>
-            <button id="personal-projects-btn"><span>Personal projects</span></button>
+            <button id="personal-projects-btn"><span>Projets personnels</span></button>
           </li>
           <li>
-            <button id="skills-btn"><span>Skills</span></button>
+            <button id="skills-btn"><span>Compétences</span></button>
           </li>
         </ul>
       </div>
 
       <div id="about-me-div">
-        <h2>About me</h2>
+        <h2>À propos de moi</h2>
 
         <p>
-          I discovered programming at the age of 8, when I started creating a
-          website in HTML. From that day on, I knew I was cut out to work in IT.
-          Then, at the age of 15, I started learning Python, C and C++ in my
-          spare time. I was passionate about programming (and still am today)!
+          J'ai découvert le code à l'âge de 8 ans, lorsque j'ai commencé à créer des sites web en HTML.
+          Dès lors, j'ai su que j'étais fait pour travailler dans l'informatique.
+          Puis, à l'âge de 15 ans, j'ai commencé à apprendre Python, C et C++ pendant mon temps libre.
+          J'étais passionné par la programmation (et je le suis encore aujourd'hui) !
         </p>
         <p>
-          Then, in 2021, I started digging into blockchain development,
-          particularly in Web3. I learned how blockchains work, Solidity and so
-          on. That's when I landed my first tech jobs.
+          Ensuite, en 2021, j'ai commencé à creuser dans le développement de la blockchain.
+          J'ai appris le fonctionnement des blockchains, Solidity, etc.
+          C'est là que j'ai décroché mes premiers jobs dans la tech.
         </p>
         <p>
-          After that, in 2022, I realized that I could accomplish bigger projects
-          and contribute more to the advancement of the world with AI. That's
-          when I started to learn more about the data science, deep learning and
-          mathematics behind this technology.
+          Plus tard, en 2022, j'ai réalisé que je pouvais accomplir des projets plus importants
+          grâce à l'intelligence artificielle.
+          J'ai donc commencé à en apprendre davantage sur la data science, le machine learning et les
+          mathématiques qui se cachent derrière ce domaine.
         </p>
       </div>
 
       <div id="job-experiences-div">
-        <h2>Job experiences</h2>
+        <h2>Expériences professionnelles</h2>
         <ul id="job-experiences-ul"></ul>
       </div>
 
       <div id="diplomas-div">
-        <h2>Diplomas</h2>
+        <h2>Formations</h2>
         <ul id="diplomas-ul"></ul>
       </div>
 
       <div id="personal-projects-div">
-        <h2>Personal projects</h2>
+        <h2>Projets personnels</h2>
         <ul id="personal-projects-ul"></ul>
       </div>
 
       <div id="skills-div">
-        <h2>Skills</h2>
-        <p>Here are what I've learnt and what I use.</p>
-
+        <h2>Compétences</h2>
         <ul id="skills-ul"></ul>
       </div>
     </main>
