refactor(index.html): translate titles in english

--- a/index.html
+++ b/index.html
@@ -5,11 +5,11 @@
     <meta name="description" content="Tout mon parcours">
     <meta name="viewport" content="initial-scale=1, maximum-scale=1">
     <link rel="stylesheet" href="css/style.css">
-    <title>Portfolio d'Anto</title>
+    <title>Anto's Portfolio</title>
   </head>
 
   <body id="particles-js">
-    <h1 id="title">Portfolio d'Anto Benedetti</h1>
+    <h1 id="title">Anto Benedetti's Portfolio</h1>
 
     <!-- Spacer -->
     <section><br><br><br></section>
@@ -18,25 +18,25 @@
       <div id="main-menu">
         <ul>
           <li>
-            <button id="about-me-btn"><span>À propos de moi</span></button>
+            <button id="about-me-btn"><span>About Me</span></button>
           </li>
           <li>
-            <button id="job-experiences-btn"><span>Expériences professionnelles</span></button>
+            <button id="job-experiences-btn"><span>Professional Experiences</span></button>
           </li>
           <li>
-            <button id="diplomas-btn"><span>Formations</span></button>
+            <button id="diplomas-btn"><span>Education</span></button>
           </li>
           <li>
-            <button id="personal-projects-btn"><span>Projets personnels</span></button>
+            <button id="personal-projects-btn"><span>Side Projects</span></button>
           </li>
           <li>
-            <button id="skills-btn"><span>Compétences</span></button>
+            <button id="skills-btn"><span>Skills & Hobbies</span></button>
           </li>
         </ul>
       </div>
 
       <div id="about-me-div">
-        <h2>À propos de moi</h2>
+        <h2>About Me</h2>
 
         <p>
           J'ai découvert le code à l'âge de 8 ans, lorsque j'ai commencé à créer des sites web en HTML.
@@ -58,22 +58,22 @@
       </div>
 
       <div id="job-experiences-div">
-        <h2>Expériences professionnelles</h2>
+        <h2>Professional Experiences</h2>
         <ul id="job-experiences-ul"></ul>
       </div>
 
       <div id="diplomas-div">
-        <h2>Formations</h2>
+        <h2>Education</h2>
         <ul id="diplomas-ul"></ul>
       </div>
 
       <div id="personal-projects-div">
-        <h2>Projets personnels</h2>
+        <h2>Side Projects</h2>
         <ul id="personal-projects-ul"></ul>
       </div>
 
       <div id="skills-div">
-        <h2>Compétences</h2>
+        <h2>Skills & Hobbies</h2>
         <ul id="skills-ul"></ul>
       </div>
     </main>
