refactor(index.html): translate about me section in english

--- a/index.html
+++ b/index.html
@@ -39,21 +39,13 @@
         <h2>About Me</h2>
 
         <p>
-          J'ai découvert le code à l'âge de 8 ans, lorsque j'ai commencé à créer des sites web en HTML.
-          Dès lors, j'ai su que j'étais fait pour travailler dans l'informatique.
-          Puis, à l'âge de 15 ans, j'ai commencé à apprendre Python, C et C++ pendant mon temps libre.
-          J'étais passionné par la programmation (et je le suis encore aujourd'hui) !
+          I discovered coding at the age of 8, when I started creating websites in HTML. From then on, I knew I was cut out to work in IT. Then, at the age of 15, I started learning Python, C and C++ in my spare time. I was passionate about programming (and still am today)!
         </p>
         <p>
-          Ensuite, en 2021, j'ai commencé à creuser dans le développement de la blockchain.
-          J'ai appris le fonctionnement des blockchains, Solidity, etc.
-          C'est là que j'ai décroché mes premiers jobs dans la tech.
+          Then, in 2021, I started digging into blockchain development. I learned how blockchains work, Solidity and so on. That's when I landed my first tech jobs.
         </p>
         <p>
-          Plus tard, en 2022, j'ai réalisé que je pouvais accomplir des projets plus importants
-          grâce à l'intelligence artificielle.
-          J'ai donc commencé à en apprendre davantage sur la data science, le machine learning et les
-          mathématiques qui se cachent derrière ce domaine.
+          Later, in 2022, I realized the potential of artificial intelligence and that this technology would have a major impact on our world. So I started learning more about data science, deep learning and the mathematics behind it.
         </p>
       </div>
 
