refactor(main.js): remove hobbies from title

--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
             <button id="personal-projects-btn"><span>Side Projects</span></button>
           </li>
           <li>
-            <button id="skills-btn"><span>Skills & Hobbies</span></button>
+            <button id="skills-btn"><span>Skills</span></button>
           </li>
         </ul>
       </div>
@@ -65,7 +65,7 @@
       </div>
 
       <div id="skills-div">
-        <h2>Skills & Hobbies</h2>
+        <h2>Skills</h2>
         <ul id="skills-ul"></ul>
       </div>
     </main>
