feat(index.html): add twitch & x socials

--- a/index.html
+++ b/index.html
@@ -82,6 +82,16 @@
             <img src="images/linkedin_logo.png" alt="LinkedIn logo">
           </a>
         </li>
+        <li>
+          <a href="https://x.com/opixelum" target="_blank">
+            <img src="images/x_logo.png" alt="X logo">
+          </a>
+        </li>
+        <li>
+          <a href="https://twitch.tv/opixelum" target="_blank">
+            <img src="images/twitch_logo.png" alt="Twitch logo">
+          </a>
+        </li>
       </ul>
     </div>
 
