refactor(index.html): shorten professional experiences button

--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
             <button id="about-me-btn"><span>About Me</span></button>
           </li>
           <li>
-            <button id="job-experiences-btn"><span>Professional Experiences</span></button>
+            <button id="job-experiences-btn"><span>Professional</span></button>
           </li>
           <li>
             <button id="diplomas-btn"><span>Education</span></button>
